# workflow.doc.generator

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  cliff.toml  devops_objectives_with_children.py  example.py  index.html  okr_raw.json  okr_report.html  okr_report.md  okr_slides.md  okr_summary.html  okr_summary.md  pyproject.toml
.devcontainer/: devcontainer.json  requirements_dev.txt  setup.sh
.github/: copilot-instructions.md
changelog/: index.html
docs/: index.md
search/: search_index.json
src/hungovercoders_workflow_doc_gen/: __main__.py  azure_devops_cli.py  azure_devops_client.py  cli.py  cli_utils.py  formatter.py  generic_cli.py  greetings.py  json_cli.py  markdown_formatter.py  okr_markdown_template.j2  revealjs_okr_template.j2
src/hungovercoders_workflow_doc_gen/schemas/: okr_summary.json
src/hungovercoders_workflow_doc_gen/templates/: okr_doc_template.j2  okr_markdown_template.j2
tests/: test_greetings.py  test_markdown_formatter.py  test_revealjs_template.py
tests/example_input/: okr_summary.example.json
tests/example_output/: okr_report.md
