[project]
name = "hungovercoders_workflow_doc_gen"
version = "0.1.1"
description = "Workflow document generator."
license = { file = "LICENSE" }
readme = "README.md"
authors = [
    { name = "dataGriff", email = "info@hungovercoders.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
hungovercoders-template-hello = "hungovercoders_workflow_doc_gen.greetings:hello_cli"
hungovercoders-azure-devops = "hungovercoders_workflow_doc_gen.azure_devops:main"

# [tool.hatch.build]
# include = [
#     "src/hungovercoders_template_python_package/schemas/**/*.json"
# ]

# [tool.hatch.build.targets.wheel]
# include = [
#     "src/hungovercoders_template_python_package/schemas/**/*.json"
# ]

# [tool.hatch.build.targets.sdist]
# include = [
#     "src/hungovercoders_template_python_package/schemas/**/*.json"
# ]

# [tool.hatch.metadata]
# allow-direct-references = true

[tool.setuptools.package-data]
hungovercoders_workflow_doc_gen = [
    "schemas/*.json",
    "schemas/**/*.json"
]
