[project]
name = "hungovercoders_workflow_doc_gen"
version = "0.1.1"
description = "Workflow document generator."
license = { file = "LICENSE" }
readme = "README.md"
authors = [
    { name = "dataGriff", email = "info@hungovercoders.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
workflow-doc-gen = "hungovercoders_workflow_doc_gen.__main__:main"

[tool.setuptools.package-data]
hungovercoders_workflow_doc_gen = [
    "schemas/*.json",
    "schemas/**/*.json",
    "templates/*.json",
    "templates/**/*.json"
]
